Modificação de idioma

--- a/index.html
+++ b/index.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     
     <title>Bel Albuquerque</title>
 </head>
 <body>
-    <h1> Bel Albuquerque</h1>
-    <br>
+    <h1> <b>Bel Albuquerque</b></h1>
     <h6>Maria Isabel Albuquerque Brandão Ferreira de Almeida </h6>
+    <br><br>
+    <p>Nasci no Brasil, sou filha de mãe basileira com pai português,<br>
+        Moro atualmente na cidade do rio de janeiro, onde nasci e cresci.</p>
+
+
+
 </body>
+
 </html>
