--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <p>Nasci no Brasil, sou filha de mãe basileira com pai português,<br>
         Moro atualmente na cidade do rio de janeiro, onde nasci e cresci.</p>
 
-
+    <p>Gosto muito de lógica, gatos café e vinho</p>
 
 </body>
 
