novo codigo de fundo

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Bel Albuquerque</title>
   <style>
       body {
-        background-color: rgb(117, 116, 116);
+        
+        background: #838383 url("bel.jpg") no-repeat right top fixed
       }
       h1 {
     color: rgb(206, 206, 206);
@@ -28,8 +29,6 @@
   </style>
 </head>
 <body>
-   
-    <img class="fotoDaBel" src="bel.jpg" alt="Foto de Bel Albuquerque" align="right" width="1400px" position=absolute>
     <br><br><br><br><br><br><br><br><br><br>
     <br><br><br><br><br>
     <h1> <b>Bel Albuquerque</b></h1>
