--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-    <title>Bel Albuquerque</title>
+    <title>teste</title>
     <style>
+        img {
+	        max-width:100%;
+	        height:auto;
+         }
          body {
             background-image:url("bel.jpg");
             background-repeat: no-repeat;
@@ -13,6 +17,8 @@
             background-attachment: local;
             background-size: 1400px;
             background-color: #838383;
+            max-width:100%;
+	        height:auto;
          }
          h1 {
             color: rgb(206, 206, 206);
